Make command an interface